# ChangeLog for net-misc/wget
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/wget/ChangeLog,v 1.98 2008/05/07 20:54:13 maekke Exp $

  07 May 2008; Markus Meier <maekke@gentoo.org> wget-1.11.1.ebuild:
  amd64 stable, bug #220569

  06 May 2008; Brent Baude <ranger@gentoo.org> wget-1.11.1.ebuild:
  stable ppc, bug 220569

  06 May 2008; Raúl Porcel <armin76@gentoo.org> wget-1.11.1.ebuild:
  alpha/ia64/sparc/x86 stable wrt #220569

  06 May 2008; Jeroen Roovers <jer@gentoo.org> wget-1.11.1.ebuild:
  Stable for HPPA (bug #220569).

*wget-1.11.2 (06 May 2008)

  06 May 2008; Mike Frysinger <vapier@gentoo.org> +wget-1.11.2.ebuild:
  Version bump #220439 by Petr Pisar.

*wget-1.11.1 (26 Mar 2008)

  26 Mar 2008; Mike Frysinger <vapier@gentoo.org> +wget-1.11.1.ebuild:
  Version bump.

*wget-1.11-r1 (16 Feb 2008)

  16 Feb 2008; Mike Frysinger <vapier@gentoo.org>
  +files/wget-1.11-progress-bar-assert.patch, +wget-1.11-r1.ebuild:
  Grab fix from upstream for progress bar assert failure in some locales
  #208484 by Maxim Britov.

  28 Jan 2008; <pva@gentoo.org> wget-1.10.2.ebuild, wget-1.11.ebuild:
  License changed to GPL-3, thank you Winterheart for report, quotation fix.

*wget-1.11 (28 Jan 2008)

  28 Jan 2008; Mike Frysinger <vapier@gentoo.org>
  +files/wget-1.11-linking.patch, +wget-1.11.ebuild:
  Version bump #207872 by Matthias Vill.

  25 Dec 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing seemant from metadata.xml as per #202469. Assigning to
  maintainer-needed.

  22 Oct 2007; Seemant Kulleen <seemant@gentoo.org> wget-1.9.1-r5.ebuild,
  wget-1.10.2.ebuild:
  homepage update thanks to Petr Pisar in bug #196738

  17 Oct 2006; Roy Marples <uberlord@gentoo.org> wget-1.10.2.ebuild:
  Added ~sparc-fbsd keyword.

  12 Oct 2006; Fabian Groffen <grobian@gentoo.org> wget-1.9.1-r5.ebuild,
  wget-1.10.2.ebuild:
  Dropped ppc-macos keyword, see you in prefix
