@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/wget
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/wget/ChangeLog,v 1.98 2008/05/07 20:54:13 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/wget/ChangeLog,v 1.99 2008/06/18 16:38:19 vapier Exp $
+
+*wget-1.11.3 (18 Jun 2008)
+
+  18 Jun 2008; Mike Frysinger <vapier@gentoo.org> +wget-1.11.3.ebuild:
+  Version bump #228045 by Conrad Kostecki.
 
   07 May 2008; Markus Meier <maekke@gentoo.org> wget-1.11.1.ebuild:
   amd64 stable, bug #220569
